Bug 271427 - bluedevil crash renaming a disapeared device
Summary: bluedevil crash renaming a disapeared device
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-21 16:16 UTC by Johann-Nikolaus Andreae
Modified: 2011-10-07 22:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johann-Nikolaus Andreae 2011-04-21 16:16:19 UTC
Application: kcmshell4 ()
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.1-1.2-desktop x86_64
Distribution: "openSUSE 11.4 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
The bluetooth mouse disappear frequently
I try to rename the device.
Clicking  at the ok button the divice is disappeared.
bluedevil crash

-- Backtrace:
Application: KDE-Kontrollmodul (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  BlueDevil::Device::Private::_k_ensureDeviceCreated (this=0x0, busDevicePath=...) at /usr/src/debug/libbluedevil-v1.8-1/bluedevil/bluedevildevice.cpp:120
#7  0x00007fd07b40ebf4 in BlueDevil::Device::setAlias (this=0x8b2b80, alias=...) at /usr/src/debug/libbluedevil-v1.8-1/bluedevil/bluedevildevice.cpp:405
#8  0x00007fd07b6328bb in KCMBlueDevilDevices::renameAliasDevice (this=<value optimized out>) at /usr/src/debug/bluedevil-1.0.2/src/kcmodule/bluedevildevices.cpp:468
#9  0x00007fd07b62f7e4 in KCMBlueDevilDevices::qt_metacall (this=0x849e50, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9b39c930) at /usr/src/debug/bluedevil-1.0.2/build/src/kcmodule/moc_bluedevildevices.cpp:91
#10 0x00007fd0915f9def in QMetaObject::activate (sender=0x885bb0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff9b39c930) at kernel/qobject.cpp:3272
#11 0x00007fd090dfea32 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#12 0x00007fd090b46d9b in QAbstractButtonPrivate::emitClicked (this=<value optimized out>) at widgets/qabstractbutton.cpp:546
#13 0x00007fd090b4835b in QAbstractButtonPrivate::click (this=0x8d5c60) at widgets/qabstractbutton.cpp:539
#14 0x00007fd090b485cc in QAbstractButton::mouseReleaseEvent (this=0x885bb0, e=0x7fff9b39d2b0) at widgets/qabstractbutton.cpp:1121
#15 0x00007fd0907e5538 in QWidget::event (this=0x885bb0, event=0x7fff9b39d2b0) at kernel/qwidget.cpp:8200
#16 0x00007fd090793d14 in QApplicationPrivate::notify_helper (this=0x674740, receiver=0x885bb0, e=0x7fff9b39d2b0) at kernel/qapplication.cpp:4445
#17 0x00007fd09079caac in QApplication::notify (this=<value optimized out>, receiver=0x885bb0, e=0x7fff9b39d2b0) at kernel/qapplication.cpp:4006
#18 0x00007fd0922889e6 in KApplication::notify (this=0x7fff9b39e050, receiver=0x885bb0, event=0x7fff9b39d2b0) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#19 0x00007fd0915e4bfc in QCoreApplication::notifyInternal (this=0x7fff9b39e050, receiver=0x885bb0, event=0x7fff9b39d2b0) at kernel/qcoreapplication.cpp:732
#20 0x00007fd090794d25 in sendEvent (receiver=0x885bb0, event=0x7fff9b39d2b0, alienWidget=0x885bb0, nativeWidget=0x7d81e0, buttonDown=0x7fd091263178, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:215
#21 QApplicationPrivate::sendMouseEvent (receiver=0x885bb0, event=0x7fff9b39d2b0, alienWidget=0x885bb0, nativeWidget=0x7d81e0, buttonDown=0x7fd091263178, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3105
#22 0x00007fd090812e08 in QETWidget::translateMouseEvent (this=0x7d81e0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4438
#23 0x00007fd0908114c9 in QApplication::x11ProcessEvent (this=0x7fff9b39e050, event=0x7fff9b39dc10) at kernel/qapplication_x11.cpp:3564
#24 0x00007fd0908390f2 in x11EventSourceDispatch (s=0x69a520, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#25 0x00007fd08ce8fbd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#26 0x00007fd08ce903b0 in ?? () from /lib64/libglib-2.0.so.0
#27 0x00007fd08ce90650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#28 0x00007fd09160f91f in QEventDispatcherGlib::processEvents (this=0x617ca0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#29 0x00007fd090838d8e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#30 0x00007fd0915e4052 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#31 0x00007fd0915e4265 in QEventLoop::exec (this=0x7fff9b39df30, flags=...) at kernel/qeventloop.cpp:201
#32 0x00007fd090c4632e in QDialog::exec (this=0x7d81e0) at dialogs/qdialog.cpp:552
#33 0x00007fd081ccacf6 in kdemain (_argc=6768016, _argv=0x7fff9b39e230) at /usr/src/debug/kdebase-runtime-4.6.0/kcmshell/main.cpp:287
#34 0x00000000004075e9 in _start ()

Reported using DrKonqi
Comment 1 Alex Fiestas 2011-10-07 22:38:44 UTC
Git commit 41bb2fce33c77906c72712e26213d3804a682cc4 by Alex Fiestas.
Committed on 08/10/2011 at 00:36.
Pushed by afiestas into branch '1.0'.

Close the renameAlias dialog if the devices change

This is not perfect since this will be triggerd when ANY change
happens in any device but is better than crashing. Will try to fix
better in future versions of BlueDevil.

BUG: 271427
FIXED-IN: 1.0.6

M  +10   -5    src/kcmodule/bluedevildevices.cpp

http://commits.kde.org/bluedevil/41bb2fce33c77906c72712e26213d3804a682cc4