Close the renameAlias dialog if the devices change

This is not perfect since this will be triggerd when ANY change
happens in any device but is better than crashing. Will try to fix
better in future versions of BlueDevil.

BUG: 271427
FIXED-IN: 1.0.6